stylesheet.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Raleway", serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
  font-size: 20px;
}

.calculator-body {
  background-color: pink;
  width: 700px;
  margin: 40px auto;
  display: flex;
  flex-direction: column;
  border: 8px solid black;
}
.display-container {
  border-bottom: 5px solid black;
  background-color: rgb(161, 193, 253);
  height: 150px;
  padding: 25px 50px;
  margin-bottom: 5px;
  font-size: 80px;
  text-align: right;
}

.button-body {
  display: flex;
  width: auto;
  height: auto;
  margin-bottom: 5px;
}

.number-container {
  flex-shrink: 1;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row-reverse;
}

.operator-container {
  flex-shrink: 1;
  display: flex;
  flex-direction: column;
  margin: 0 10px;
}

.function-container {
  display: flex;
  flex-wrap: wrap;
  margin: 0 10px;
}
.functionButton {
  flex-grow: 1;
  padding: 10px 20px;
  background-color: coral;
  font-size: 40px;
  margin: 0.5px;
  padding: 20px;
}

.operatorButton {
  padding: 20px;
  margin: 0.5px;
  flex-grow: 1;
  flex-shrink: 1;
  background-color: aqua;
  font-size: 40px;
}

.numButton {
  padding: 50px;
  flex-grow: 1;
  flex-shrink: 1;
  background-color: blanchedalmond;
}

#button0 {
  flex-grow: 7;
}

button {
  border-radius: 5px;
  border: 3px solid black;
}

button:active {
  background-color: #faf788;
}

